--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "@shopify/flash-list": "^1.7.0",
     "add": "^2.0.6",
     "axios": "^1.7.2",
     "react": "18.2.0",
