--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
-    "@shopify/flash-list": "^1.7.0",
     "add": "^2.0.6",
     "axios": "^1.7.2",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-collapsible": "^1.6.1",
     "react-native-curved-bottom-bar": "^3.3.1",
+    "react-native-fast-image": "^8.6.3",
     "react-native-reanimated": "^3.14.0",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
